# tgvault

./: .gitignore  LICENSE  README.md  SECURITY.md  install.ps1  install.sh  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml
docs/: index.html
skill/: SKILL.md
src/tgvault/: cli.py  config.py  db.py  defaults.py  paths.py  sync.py  telegram.py
tests/: test_cli.py  test_vault.py
