[project]
name = "tgvault"
version = "0.1.0"
description = "Your Telegram messages, in a local database your AI can work with. Local-first, security-first."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "telethon>=1.42.0,<2.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "qrcode>=7.0",
]

[project.scripts]
tgvault = "tgvault.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tgvault"]

[dependency-groups]
dev = ["pytest>=8.0"]
